write in the secondpart of the index file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Landing page</title>
-    <link rel="stylesheet" href="landingstyle.css"> 
+    <link rel="stylesheet" href="landingstyle.css">
 </head>
+
 <body>
     <div class="Header">
         <div class="headline">
@@ -18,15 +20,37 @@
         <div class="introduction">
             <div class="info">
                 <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <img src="./01.png">
+            <img src="./1.png" alt="infoimage">
         </div>
     </div>
-    <div class="secondpart"></div>
+    <div class="secondpart">
+        <h1>Some random information</h1>
+        <div class="content" style="display:flex;">
+            <div>
+                <img alt="Image placeholder">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img alt="Image placeholder">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img alt="Image placeholder">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img alt="Image placeholder">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
     <div class="wisewords"></div>
     <div class="contact"></div>
     <div class="footer"></div>
 </body>
+
 </html>
