write in wisewords and contact parts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    
     <div class="Header">
         <div class="headline">
             <h1>Header Logo</h1>
@@ -27,6 +28,7 @@
             <img src="./1.png" alt="infoimage">
         </div>
     </div>
+
     <div class="secondpart">
         <h1>Some random information</h1>
         <div class="content" style="display:flex;">
@@ -48,8 +50,21 @@
             </div>
         </div>
     </div>
-    <div class="wisewords"></div>
-    <div class="contact"></div>
+
+    <div class="wisewords">
+        <p>This is an inspring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know? All I know is that it looks nice.</p>
+        <h3>-Thor, Odinson</h3>
+    </div>
+
+    <div class="contact">
+        <div class="contact-tab" style="display:flex">
+            <div>
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
     <div class="footer"></div>
 </body>
 
