--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    
+
     <div class="Header">
         <div class="headline">
             <h1>Header Logo</h1>
@@ -65,7 +65,10 @@
             <button>Sign up</button>
         </div>
     </div>
-    <div class="footer"></div>
+
+    <div class="footer">
+        Copy right - The Odin Project 2021
+    </div>
 </body>
 
 </html>
