customize the basic style for the webpage

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    <div class="Header">
+    <div class="header">
         <div class="headline">
-            <h1>Header Logo</h1>
+            <h3>Header Logo</h3>
             <ul class="headlinks">
                 <li>header link one</li>
                 <li>header link two</li>
@@ -25,7 +25,7 @@
                     is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <img src="./1.png" alt="infoimage">
+            <img src="./01.png" alt="infoimage">
         </div>
     </div>
 
@@ -57,7 +57,7 @@
     </div>
 
     <div class="contact">
-        <div class="contact-tab" style="display:flex">
+        <div class="contact-tab">
             <div>
                 <h2>Call to action! It's time!</h2>
                 <p>Sign up for our product by clicking that button right over there</p>
